err/morbid.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/morbid'...
Compiling './lib/python3.5/site-packages/morbid/error.py'...
***   File "./lib/python3.5/site-packages/morbid/error.py", line 2
    print "MorbidQ Error:",msg
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/morbid/morbid.py'...
***   File "./lib/python3.5/site-packages/morbid/morbid.py", line 82
    def stomp_connected_callback((headers, body)):
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/morbid/mqsecurity.py'...
***   File "./lib/python3.5/site-packages/morbid/mqsecurity.py", line 115
    print "Error in import of security data from file:",filename
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/morbid/restq.py'...
***   File "./lib/python3.5/site-packages/morbid/restq.py", line 14
    raise ImportError, "Could not load one of: Python json, cjson, simplejson. Please install a json module."
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/morbid/sample_auth'...
Listing './lib/python3.5/site-packages/morbid/sample_restq'...
Compiling './lib/python3.5/site-packages/morbid/sample_restq/restq_dummy_daemon.py'...
***   File "./lib/python3.5/site-packages/morbid/sample_restq/restq_dummy_daemon.py", line 13
    raise ImportError, "Could not load one of: Python json, cjson, simplejson. Please install a json module."
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/morbid/tests'...
Compiling './lib/python3.5/site-packages/morbid/tests/test_morbid.py'...
***   File "./lib/python3.5/site-packages/morbid/tests/test_morbid.py", line 83
    print "Warning: message received out of sequence expected"
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/morbid-0.8.7.3.egg-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/stomper'...
Listing './lib/python3.5/site-packages/stomper/examples'...
Listing './lib/python3.5/site-packages/stomper/tests'...
Listing './lib/python3.5/site-packages/stomper-0.4.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
